themedir = $(pkgdatadir)/icons/hicolor
size = 16x16
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	rhythmbox-set-star.png		                \
	rhythmbox-unset-star.png	                \
	rhythmbox-no-star.png                           \
        media-playlist-repeat-active-symbolic.svg       \
        media-playlist-repeat-symbolic.svg              \
        media-playlist-shuffle-active-symbolic.svg      \
        media-playlist-shuffle-symbolic.svg             

noinst_DATA =

EXTRA_DIST = \
	$(icons_DATA)	\
	$(noinst_DATA)
